# knowledge-reduce-core

./: .gitignore  .pre-commit-config.yaml  <MagicMock name='mock.db_path' id='4890644976'>_my_tenant  <MagicMock name='mock.db_path' id='4891327504'>_my_tenant  ARCHITECTURE.md  CONTRIBUTING.md  IMPROVEMENT_MASTER_PLAN.md  LICENSE  MODELREDUCE_MASTER_PLAN.md  MODELREDUCE_SESSIONS.md  README.md  graph_db_my_tenant  improvement_master_plan_phase_2.md  lessons_learned.md  local_path  master_plan_status.md  pyproject.toml  task.md  test_watcher_d.db-shm  test_watcher_g.db-shm  walkthrough.md
.agents/: skills.json
.agents/skills/knowledge-reduce-core/: SKILL.md
.github/workflows/: skill-validation.yml
data/: civic_honors_book.txt  civic_honors_distilled.jsonl  gold_biochem.json  gold_set.json
deploy/: com.knowledgereduce.watcher.plist  knowledgereduce-watcher.service
docs/: ROADMAP-v2.md  ROADMAP.md  model_reduce_training.md
examples/: advanced_usage.py  agent_integration.py  basic_usage.py  distillation_pipeline.py  enhanced_features.py  graph_rag_pipeline.py  ultimate_features.py
knowledge_graph_pkg/: __init__.py  __main__.py  analysis.py  blockchain.py  catalog.py  cli.py  consensus.py  core.py  coref.py  crawler.py  critique.py  cross_model.py  distillation.py  embeddings.py  enhanced.py  entity_resolution.py  evaluation.py  export.py  extraction.py  extractor_base.py  factory.py  factstore.py  graph_compiler.py  graph_store_base.py  graph_store_factory.py  graph_tool.py  graveyard.py  ingest.py  kuzu_store.py  lifecycle.py  mcp_server.py  model_distill.py  model_drop.py  model_eval.py  model_probe.py  neo4j_store.py  ontology.py  probe_templates.py  qa.py  quality.py  (+13 more)
scripts/: download_and_crawl.py  mirror_skill.py  run_suite.py  smoke_skill.py  test_drive.py  train_mlx.py  train_sft.py
tests/: conftest.py  test_analysis.py  test_audit.py  test_backends.py  test_catalog.py  test_cli.py  test_compile_sft.py  test_consensus.py  test_core.py  test_coref.py  test_crawler.py  test_critique.py  test_cross_model.py  test_distillation.py  test_distillation_io.py  test_embeddings.py  test_entity_resolution.py  test_evaluation.py  test_export.py  test_extraction.py  test_extractor_base.py  test_factory.py  test_graph_compiler.py  test_graph_tool.py  test_graveyard.py  test_hardening.py  test_ingest.py  test_kuzu_store.py  test_lifecycle.py  test_mcp_server.py  test_model_distill.py  test_model_drop.py  test_model_eval.py  test_model_probe.py  test_neo4j_store.py  test_ontology.py  test_probe_templates.py  test_qa.py  test_quality.py  test_rag.py  (+11 more)
